updated to latest main version
- added female versions of cognoman, traits, etc.
- removed female cognoman mod (see above)
- changed difficulty titles to be neuter
- translated some (new) things
- matched a few minor strings

--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -5,8 +5,8 @@
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan (aka. ShadowDuke)</author>
   <modioID>143281</modioID>
-  <modioFileID>1985808</modioFileID>
-  <modversion>1.58</modversion>
+  <modioFileID>2000557</modioFileID>
+  <modversion>1.58a</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
